# worker-cookie

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  SECURITY.md  cliff.toml  wrangler.jsonc
.github/workflows/: build.yml  release.yml  tag.yml
assets/: themes.css
config/: cookie-banner.toml
docs/: CNAME  _config.yml  configuration.md  contribute.md  disclaimer.md  index.md  issues.md  themes.html
docs/_data/: nav.yml
docs/_includes/: head_custom.html
docs/_layouts/: docs.html
docs/setup/: index.md
specs/: cookie-banner-themes.html  requirements.md
src/: banner.rs  config.rs  consent.rs  injector.rs  lib.rs  utils.rs
