[package]
name = "cookie-worker"
version = "0.1.0"
edition = "2024"
authors = ["Δ ǀ Ξ ȼ <alec@noser.net>"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
worker = { version = "0.8.3" }
worker-macros = { version = "0.8.3" }
serde = { version = "1", features = ["derive"] }
toml = "1"
cfg-if = "1"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "s"
